clang/test/BSC/Negative/NullabilityCheck/null_pointer_constant/null_pointer_constant_2.cbs
// RUN: %clang_cc1 -fsyntax-only -verify %s

typedef struct {
  int *p;
} S1;

typedef struct {
  int *_Owned _Nullable p;
} S2;

typedef struct {
  int *_Borrow _Nullable p;
} S3;

typedef struct {
  int *p;
  int *_Borrow _Nullable q;
} S4;

// _Owned nullable struct field initialization rejects void pointer null constants.
void init_owned_nullable_field(void) {
  S2 s1 = {(void *)0}; // expected-error {{incompatible _Owned types, cannot cast 'void *' to 'int *_Owned _Nullable'}}
}

// _Owned nullable struct field assignment rejects void pointer null constants.
void assign_owned_nullable_field(S2 s) {
  s.p = (void *)0; // expected-error {{incompatible _Owned types, cannot cast 'void *' to 'int *_Owned _Nullable'}}
}

void take_owned_nullable_struct(S2 s);

// _Owned nullable struct field arguments reject void pointer null constants.
void call_owned_nullable_struct(void) {
  take_owned_nullable_struct((S2){(void *)0}); // expected-error {{incompatible _Owned types, cannot cast 'void *' to 'int *_Owned _Nullable'}}
}

// _Owned nullable struct field returns reject void pointer null constants.
S2 return_owned_nullable_void_zero(void) {
  return (S2){(void *)0}; // expected-error {{incompatible _Owned types, cannot cast 'void *' to 'int *_Owned _Nullable'}}
}

// _Borrow nullable struct field initialization rejects void pointer null constants.
void init_borrow_nullable_field(void) {
  S3 s1 = {(void *)0}; // expected-error {{incompatible _Borrow types, cannot cast 'void *' to 'int *_Borrow _Nullable'}}
}

// _Borrow nullable struct field assignment rejects void pointer null constants.
void assign_borrow_nullable_field(S3 s) {
  s.p = (void *)0; // expected-error {{incompatible _Borrow types, cannot cast 'void *' to 'int *_Borrow _Nullable'}}
}

void take_borrow_nullable_struct(S3 s);

// _Borrow nullable struct field arguments reject void pointer null constants.
void call_borrow_nullable_struct(void) {
  take_borrow_nullable_struct((S3){(void *)0}); // expected-error {{incompatible _Borrow types, cannot cast 'void *' to 'int *_Borrow _Nullable'}}
}

// _Borrow nullable struct field returns reject void pointer null constants.
S3 return_borrow_nullable_void_zero(int *_Borrow _Nullable anchor) {
  return (S3){(void *)0}; // expected-error {{incompatible _Borrow types, cannot cast 'void *' to 'int *_Borrow _Nullable'}}
}

// Mixed struct field initialization rejects void pointer null constants for the _Borrow field.
void init_mixed_nullable_field(void) {
  S4 s1 = {nullptr, (void *)0}; // expected-error {{incompatible _Borrow types, cannot cast 'void *' to 'int *_Borrow _Nullable'}}
}

// Mixed struct field assignment rejects void pointer null constants for the _Borrow field.
void assign_mixed_nullable_field(S4 s) {
  s.q = (void *)0; // expected-error {{incompatible _Borrow types, cannot cast 'void *' to 'int *_Borrow _Nullable'}}
}

void take_mixed_nullable_struct(S4 s);

// Mixed struct field arguments reject void pointer null constants for the _Borrow field.
void call_mixed_nullable_struct(void) {
  take_mixed_nullable_struct((S4){nullptr, (void *)0}); // expected-error {{incompatible _Borrow types, cannot cast 'void *' to 'int *_Borrow _Nullable'}}
}

// Mixed struct field returns reject void pointer null constants for the _Borrow field.
S4 return_mixed_nullable_void_zero(int *_Borrow _Nullable anchor) {
  return (S4){nullptr, (void *)0}; // expected-error {{incompatible _Borrow types, cannot cast 'void *' to 'int *_Borrow _Nullable'}}
}

// Raw pointer struct field initialization in a safe function rejects unsafe void pointer conversion.
_Safe void safe_func_init_raw_field(void) {
  S1 s = {(void *)0}; // expected-error {{conversion from type 'void *' to 'int *' is forbidden in the safe zone}}
}

// Raw pointer struct field assignment in a safe function rejects unsafe void pointer conversion.
_Safe void safe_func_assign_raw_field(S1 s) {
  s.p = (void *)0; // expected-error {{conversion from type 'void *' to 'int *' is forbidden in the safe zone}}
}

_Safe void safe_take_raw_struct(S1 s);

// Raw pointer struct field arguments in a safe function reject unsafe void pointer conversion.
_Safe void safe_func_call_raw_struct(void) {
  safe_take_raw_struct((S1){(void *)0}); // expected-error {{conversion from type 'void *' to 'int *' is forbidden in the safe zone}}
}

// Raw pointer struct field returns from a safe function reject unsafe void pointer conversion.
_Safe S1 safe_return_raw_void_zero(void) {
  return (S1){(void *)0}; // expected-error {{conversion from type 'void *' to 'int *' is forbidden in the safe zone}}
}

// _Owned nullable struct field initialization in a safe function rejects void pointer null constants.
_Safe void safe_func_init_owned_nullable_field(void) {
  S2 s1 = {(void *)0}; // expected-error {{conversion from type 'void *' to 'int *_Owned _Nullable' is forbidden in the safe zone}}
}

// _Owned nullable struct field assignment in a safe function rejects void pointer null constants.
_Safe void safe_func_assign_owned_nullable_field(S2 s) {
  s.p = (void *)0; // expected-error {{conversion from type 'void *' to 'int *_Owned _Nullable' is forbidden in the safe zone}}
}

_Safe void safe_take_owned_nullable_struct(S2 s);

// _Owned nullable struct field arguments in a safe function reject void pointer null constants.
_Safe void safe_func_call_owned_nullable_struct(void) {
  safe_take_owned_nullable_struct((S2){(void *)0}); // expected-error {{conversion from type 'void *' to 'int *_Owned _Nullable' is forbidden in the safe zone}}
}

// _Owned nullable struct field returns from a safe function reject void pointer null constants.
_Safe S2 safe_return_owned_nullable_void_zero(void) {
  return (S2){(void *)0}; // expected-error {{conversion from type 'void *' to 'int *_Owned _Nullable' is forbidden in the safe zone}}
}

// _Borrow nullable struct field initialization in a safe function rejects void pointer null constants.
_Safe void safe_func_init_borrow_nullable_field(void) {
  S3 s1 = {(void *)0}; // expected-error {{conversion from type 'void *' to 'int *_Borrow _Nullable' is forbidden in the safe zone}}
}

// _Borrow nullable struct field assignment in a safe function rejects void pointer null constants.
_Safe void safe_func_assign_borrow_nullable_field(S3 s) {
  s.p = (void *)0; // expected-error {{conversion from type 'void *' to 'int *_Borrow _Nullable' is forbidden in the safe zone}}
}

_Safe void safe_take_borrow_nullable_struct(S3 s);

// _Borrow nullable struct field arguments in a safe function reject void pointer null constants.
_Safe void safe_func_call_borrow_nullable_struct(void) {
  safe_take_borrow_nullable_struct((S3){(void *)0}); // expected-error {{conversion from type 'void *' to 'int *_Borrow _Nullable' is forbidden in the safe zone}}
}

// _Borrow nullable struct field returns from a safe function reject void pointer null constants.
_Safe S3 safe_return_borrow_nullable_void_zero(int *_Borrow _Nullable anchor) {
  return (S3){(void *)0}; // expected-error {{conversion from type 'void *' to 'int *_Borrow _Nullable' is forbidden in the safe zone}}
}

// Mixed struct field initialization in a safe function rejects void pointer null constants.
_Safe void safe_func_init_mixed_nullable_field(void) {
  S4 s1 = {nullptr, (void *)0}; // expected-error {{conversion from type 'void *' to 'int *_Borrow _Nullable' is forbidden in the safe zone}}
}

// Mixed struct field assignment in a safe function rejects void pointer null constants.
_Safe void safe_func_assign_mixed_nullable_field(S4 s) {
  s.q = (void *)0; // expected-error {{conversion from type 'void *' to 'int *_Borrow _Nullable' is forbidden in the safe zone}}
}

_Safe void safe_take_mixed_nullable_struct(S4 s);

// Mixed struct field arguments in a safe function reject void pointer null constants.
_Safe void safe_func_call_mixed_nullable_struct(void) {
  safe_take_mixed_nullable_struct((S4){nullptr, (void *)0}); // expected-error {{conversion from type 'void *' to 'int *_Borrow _Nullable' is forbidden in the safe zone}}
}

// Mixed struct field returns from a safe function reject void pointer null constants.
_Safe S4 safe_return_mixed_nullable_void_zero(int *_Borrow _Nullable anchor) {
  return (S4){nullptr, (void *)0}; // expected-error {{conversion from type 'void *' to 'int *_Borrow _Nullable' is forbidden in the safe zone}}
}
